# Memora

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  render.yaml  vercel.json
Docs/: SOCIAL_PROMPTING_QUICKSTART.md  SOCIAL_PROMPTING_SETUP.md
backend/: .env.example  .env.social.example  Dockerfile  README.md  lamatic-social-inspire-flow.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  activity.py  chat.py  health.py  ingest.py  intelligence.py  memory.py  search.py  social.py  users.py
backend/app/core/: __init__.py  auth.py
backend/app/core/embedding/: __init__.py  service.py
backend/app/core/ingestion/: __init__.py  chunker.py  parser.py
backend/app/core/intelligence/: __init__.py  agent.py  connections.py  digest.py  evolution.py  focus_mode.py  insights.py  spaced_repetition.py
backend/app/core/retrieval/: __init__.py  search.py
backend/app/core/social/: __init__.py  lamatic_service.py  processor.py
backend/app/db/: __init__.py  database.py  qdrant.py  users.py
backend/app/models/: __init__.py  ingest.py  memory.py  search.py  social.py  user.py
backend/app/services/: __init__.py  activity_service.py  chat_service.py
frontend/: Dockerfile  netlify.toml  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/: command-menu.tsx  notifications-popover.tsx  providers.tsx
frontend/src/lib/: activity.ts  api.ts  hooks.ts
(+41 files in other folders)
